--- a/css/alm.css
+++ b/css/alm.css
@@ -2,4 +2,13 @@
 	padding: 1em;
 	background: #fff;
 	color: #000;
+	opacity: 1;
 }
+#alm-default-msg .x {
+	border: 1px solid;
+    padding: 0 0.4em 0.1em;
+    border-radius: 3px;
+}
+
+/*Hide Box on Alert Bar*/
+#hide-btn { float: right; cursor: pointer; }
