--- a/css/alm.css
+++ b/css/alm.css
@@ -11,5 +11,5 @@
 }
 
 /*Hide Box on Alert Bar*/
-#hide-btn { float: right; cursor: pointer; }
+#hide-btn { float: right; cursor: pointer; border-radius:3px; }
 #hide-btn .x:hover { border-width:0; }
