--- a/css/albar.css
+++ b/css/albar.css
@@ -1,10 +1,10 @@
-#alm-default-msg{
+#alert-bar-msg{
 	padding: 1em;
 	background: #fff;
 	color: #000;
 	opacity: 1;
 }
-#alm-default-msg .x {
+#alert-bar-msg .x {
 	border: 1px solid;
     padding: 0 0.4em 0.1em;
     border-radius: 3px;
