--- a/css/albar.css
+++ b/css/albar.css
@@ -4,6 +4,11 @@
 	color: #000;
 	opacity: 1;
 }
+#alert-bar-msg:after{
+	content: '';
+	display: block;
+	clear: right;
+}
 #alert-bar-msg .x {
 	border: 1px solid;
     padding: 0 0.4em 0.1em;
